--- a/services/payments/package.json
+++ b/services/payments/package.json
@@ -47,7 +47,8 @@
     "qrcode": "^1.5.4",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
-    "stripe": "^20.1.2"
+    "stripe": "^20.1.2",
+    "jsonwebtoken": "^9.0.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
@@ -76,7 +77,8 @@
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.7.3",
-    "typescript-eslint": "^8.20.0"
+    "typescript-eslint": "^8.20.0",
+    "@types/jsonwebtoken": "^9.0.10"
   },
   "jest": {
     "moduleFileExtensions": [
