--- a/services/interactions/docker-compose.yaml
+++ b/services/interactions/docker-compose.yaml
@@ -22,6 +22,8 @@ services:
         condition: service_healthy
       rabbitmq:
         condition: service_healthy
+      users:
+        condition: service_healthy
 
   mongo-interactions:
     image: mongo
