--- a/services/frontend/docker-compose.yaml
+++ b/services/frontend/docker-compose.yaml
@@ -8,6 +8,7 @@ services:
       - "traefik.http.routers.frontend.rule=Host(`${HOST}`)"
       - "traefik.http.routers.frontend.entrypoints=web"
       - "traefik.http.services.frontend.loadbalancer.server.port=${FRONTEND_SERVICE_PORT}"
+      - "traefik.docker.network=${COMPOSE_PROJECT_NAME}_eventonight-network"
     restart: unless-stopped
     environment:
         - VITE_HOST=${HOST}
