--- a/services/chat/docker-compose.yaml
+++ b/services/chat/docker-compose.yaml
@@ -15,6 +15,7 @@ services:
       - "traefik.http.routers.chat.rule=Host(`chat.${HOST}`)"
       - "traefik.http.routers.chat.entrypoints=web"
       - "traefik.http.services.chat.loadbalancer.server.port=${CHAT_SERVICE_PORT}"
+      - "traefik.docker.network=${COMPOSE_PROJECT_NAME}_eventonight-network"
     restart: unless-stopped
     depends_on:
       mongo-chat:
