--- a/services/media/docker-compose.yaml
+++ b/services/media/docker-compose.yaml
@@ -14,6 +14,7 @@ services:
       - "traefik.http.routers.media.rule=Host(`media.${HOST}`)"
       - "traefik.http.routers.media.entrypoints=web"
       - "traefik.http.services.media.loadbalancer.server.port=9020"
+      - "traefik.docker.network=${COMPOSE_PROJECT_NAME}_eventonight-network"
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:9020/health"]
       interval: 2s
