--- a/docs/openAPI/openapi/chat.yaml
+++ b/docs/openAPI/openapi/chat.yaml
@@ -8,6 +8,8 @@ paths:
       summary: Send first message and create a new conversation with an organization
       servers:
         - url: http://localhost:9040
+      security:
+        - BearerAuth: []
       parameters:
         - name: userId
           in: path
@@ -705,4 +707,10 @@ components:
         - senderId
         - content
         - createdAt
-    
+  
+  securitySchemes:
+    BearerAuth:
+      type: http
+      scheme: bearer
+      bearerFormat: JWT
+      description: 'Enter your JWT token in the format: Bearer <token>'
