--- a/docs/openAPI/openapi/chat.yaml
+++ b/docs/openAPI/openapi/chat.yaml
@@ -339,6 +339,8 @@ paths:
       summary: Send a message in an existing conversation for a user
       servers:
         - url: http://localhost:9040
+      security:
+        - BearerAuth: []
       parameters:
         - name: userId
           in: path
