chore(docs): update open api for chat service

--- a/docs/openAPI/openapi/chat.yaml
+++ b/docs/openAPI/openapi/chat.yaml
@@ -468,6 +468,8 @@ paths:
       summary: Mark messages in a conversation as read for a user
       servers:
         - url: http://localhost:9040
+      security:
+        - BearerAuth: []
       parameters:
         - name: conversationId
           in: path
