--- a/docs/openAPI/openapi/payments.yaml
+++ b/docs/openAPI/openapi/payments.yaml
@@ -562,6 +562,56 @@ paths:
       tags:
         - User Events
 
+  /users/{userId}/events/{eventId}/pdf:
+    get:
+      summary: Get PDF with all tickets for a user and event
+      description: Download a PDF containing all tickets for the specified user and event
+      security:
+        - BearerAuth: []
+      parameters:
+        - name: userId
+          in: path
+          required: true
+          schema:
+            type: string
+          example: usr_123e4567-e89b-12d3-a456-426614174000
+        - name: eventId
+          in: path
+          required: true
+          schema:
+            type: string
+          example: evt_550e8400-e29b-41d4-a716-446655440000
+      responses:
+        '200':
+          description: PDF with all tickets
+          content:
+            application/pdf:
+              schema:
+                type: string
+                format: binary
+        '403':
+          description: Forbidden - User can only access their own tickets
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+              example:
+                statusCode: 403
+                message: "Forbidden: Cannot access tickets of other users"
+                error: Forbidden
+        '404':
+          description: No tickets found for this event
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+              example:
+                statusCode: 404
+                message: "No tickets found for this event"
+                error: Not Found
+      tags:
+        - User Events
+
   /checkout-sessions:
     post:
       summary: Create a checkout session
