--- a/services/events/docker-compose.yaml
+++ b/services/events/docker-compose.yaml
@@ -12,6 +12,7 @@ services:
       - RABBITMQ_PASS=${RABBITMQ_PASS}
       - RABBITMQ_PORT=${RABBITMQ_PORT}
       - HOST=${HOST}
+      - AUTH_PUBLIC_KEY_URL=http://users:${USERS_SERVICE_PORT}/public-keys
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.events.rule=Host(`events.${HOST}`)"
