feat(seed): implement user seeding with JSON generation in TypeScript

--- a/.gitignore
+++ b/.gitignore
@@ -27,12 +27,13 @@ dist/
 package-lock.json
 pnpm-lock.yaml
 yarn.lock
+infrastructure/seed/seed-output/
 
 # ----------------------
 # IDEs / Editors
 # ----------------------
 .idea/
-#.vscode/
+.vscode/
 *.iml
 
 .metals/
