chore(docs): fix bug in user documentation

--- a/docs/openAPI/openapi/users.yaml
+++ b/docs/openAPI/openapi/users.yaml
@@ -479,10 +479,10 @@ components:
     ValidLogin:
       type: object
       required:
-        - usernameOrEmail
+        - username
         - password
       properties:
-        usernameOrEmail:
+        username:
           type: string
           example: johndoe
         password:
